# corge

./: CMakeLists.txt  CorgeConfig.cmake.in  README.md
corge/: CMakeLists.txt  corge.cc  corge.h  corge_version_h.in  corgegator.cc
tests/: CMakeLists.txt  test_corge.cc
